--- a/css/components/media.styl
+++ b/css/components/media.styl
@@ -30,6 +30,15 @@
         display: grid
         grid-template-columns: 0.5fr
         grid-column-gap: 15%
+    .header-logo
+        width: 70px
+    button 
+        font-size: initial
+    .Main
+        min-height: calc(100vh - 70px - 60px)
+    .main__sub
+        padding: 0
+        height: 50px
        
    
         
