--- a/css/components/body.styl
+++ b/css/components/body.styl
@@ -1,9 +1,11 @@
 
 .main__sub
-    text-align: center
-    padding: 20px
+    padding: 10px 0
     background: Color-variacion 
     color: Color-oscuro1
+    display: flex
+    align-items: center
+    justify-content: center
 
 .store 
     display: grid
