--- a/css/components/media.styl
+++ b/css/components/media.styl
@@ -36,9 +36,8 @@
         font-size: initial
     .Main
         min-height: calc(100vh - 70px - 60px)
-    .main__sub
-        padding: 0
-        height: 50px
+    body
+        font-size: 15px
        
    
         
