--- a/css/components/media.styl
+++ b/css/components/media.styl
@@ -28,7 +28,8 @@
         padding: 10px 0 0 0
     header
         display: grid
-        grid-template-columns: 0.5fr
+        grid-column-gap: 0
+        grid-template-columns: 0.3fr
         grid-column-gap: 15%
     .header-logo
         width: 70px
@@ -38,6 +39,8 @@
         min-height: calc(100vh - 70px - 60px)
     body
         font-size: 15px
+    .material-icons.md-36
+        margin: 0
        
    
         
